# amplifier-bundle-harness-machine

./: .gitignore  README.md  bundle.md
agents/: capability-advisor.md  environment-analyst.md  harness-critic.md  harness-evaluator.md  harness-generator.md  harness-refiner.md  mission-architect.md  plan-writer.md  spec-writer.md  upgrade-checker.md  upgrade-planner.md
behaviors/: harness-machine.yaml
context/: constraint-spec-template.md  harness-format.md  instructions.md  pattern.md  philosophy.md  templates-reference.md  version.md
docs/: DECISION-ARCHITECTURE.md
modes/: harness-debug.md  harness-execute.md  harness-explore.md  harness-finish.md  harness-plan.md  harness-spec.md  harness-upgrade.md  harness-verify.md
modules/hooks-harness/: pyproject.toml
modules/hooks-harness/amplifier_module_hooks_harness/: __init__.py
recipes/: check-upgrade.yaml  execute-upgrade.yaml  harness-development-cycle.yaml  harness-factory-generation.yaml  harness-refinement-loop.yaml  harness-single-iteration.yaml
runtime/: Dockerfile.template  __init__.py  cli.py  docker-compose.template.yaml  pyproject.toml.template  runtime.py  tools.py
templates/: CONTEXT-TRANSFER.md  SCRATCH.md  STATE.yaml  docker-compose.harness-machine.yaml  harness-machine.Dockerfile
tests/: test_cli.py  test_deployment_modes.py  test_hooks_harness.py  test_micro_scaffold.py  test_nano_scaffold.py  test_pico_scaffold.py  test_reference_examples.py  test_runtime.py  test_scaffold.py  test_task4_mission_architect_and_constraint_spec.py  test_task5_capability_advisor.py  test_tools.py  (+5 more)
(+64 files in other folders)
